# StowagePlanning

./: .gitignore  Balancer.h  CMakeLists.txt  CargoShip.h  Container.cpp  Crane.cpp  Floor.h  Instruction.cpp  NaiveCargoShip.cpp  NaiveCargoShip.h  Port.h  README.md  StowageAlgorithm.cpp  Utility.h  ex3_thread_reference  init.sh  makefile  makefile_old  students.txt
Ex1/: CMakeLists.txt  makefile
Ex1/expected_output/: ABCDE.csv  ABCDF.csv  simulation_errors.csv  simulation_results.csv
Ex1/src/: AlgorithmError.h  Container.cpp  Container.h  StowageAlgorithm.cpp  Utility.h
Ex1/travels/travel_1/: Route
Ex2/: .gitignore  CMakeCache.txt  CMakeLists.txt  Ex2  Ex2.cbp  Makefile  bonus.txt  cmake_install.cmake  run_command.txt
Ex2/Algorithm/: GenericAlgorithm.cpp  GenericAlgorithm.h  RandomAlgorithm.cpp  RandomAlgorithm.h  SimpleAlgorithm.cpp  SimpleAlgorithm.h  makefile
Ex2/Algorithm/BadAlgorithm/: BadAlgorithm.cpp  BadAlgorithm.h  makefile
Ex2/Common/: AlgorithmError.cpp  AlgorithmError.h  AlgorithmManager.cpp  AlgorithmManager.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  Container.cpp  Container.h  DistanceToDestinationComparator.cpp  DistanceToDestinationComparator.h  GeneralUtility.cpp  GeneralUtility.h  ISO_6346.cpp  InputUtility.cpp  InputUtility.h  Instruction.cpp  Instruction.h  OutputUtility.cpp  OutputUtility.h  Port.cpp  Port.h  Ship.cpp  Ship.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
Ex2/Simulator/: Error.cpp  Error.h  Simulation.cpp  Simulation.h  main.cpp  makefile  simulator1
Ex2/Travels_dir/bad_port_names_travel/: AAAAA_1.cargo_data  AAAAA_2.cargo_data
Ex2/Travels_dir/easy_travel/: AAAAA_1.cargo_data  r.route
Ex2/Travels_dir/invalid_travel/: ABC_1  ABC_2  p.ship_plan  r.route
Ex2/Travels_dir/medium_travel/: ABC_1  p.ship_plan
Ex2/Travels_dir/travel_1/: BBBBB_1.cargo_data
Ex2/UnhappyTravels/Travel_1/: 1.route  BBBBB_1.cargo_data
Ex2/UnhappyTravels/Travel_2/: 1.ship_plan  AAAAA_0.cargo_data
Ex2/UnhappyTravels/Travel_3/: AAAAA_2.cargo_data  STAMM_1.cargo_data
Ex2/algorithm/: GenericAlgorithm.cpp  GenericAlgorithm.h  RandomAlgorithm.cpp  RandomAlgorithm.h  makefile
Ex2/algorithm/badAlgorithm/: BadAlgorithm.cpp  BadAlgorithm.h  makefile
Ex2/common/: AlgorithmError.cpp  AlgorithmError.h  AlgorithmRegistration.cpp  Container.cpp  GeneralUtility.cpp  GeneralUtility.h  ISO_6346.h  InputUtility.cpp  InputUtility.h  Instruction.h  OutputUtility.cpp  OutputUtility.h  Port.h  Ship.cpp  Ship.h  WeightBalanceCalculator.cpp
Ex2/example_travels/Travel_1/: BBBBB_0.instructions
Ex2/example_travels/Travel_2/: AAAAA_0.instructions
Ex2/example_travels/Travel_3/: AAAAA_1.cargo_data
Ex2/example_travels/Travel_5/: CCCCC_1.cargo_data
Ex2/exm/Algo2BetterThan1/: AAAAA_1.cargo_data
Ex2/exm/Travel-Very-Diverse-Errors/: BBBBB_1.cargo_data  Plan.ship_plan  Readme
Ex2/exm/sim10/: 1.route
Ex2/exm/sim11/: BBBBB_1.cargo_data
Ex2/exm/sim12/: 1.route
Ex2/exm/sim2/: 2.ship_plan
Ex2/exm/sim3/: AAAAA_0.cargo_data
Ex2/exm/sim4/: AAAAA_1.instructions
Ex2/exm/sim5/: AAAAA_0.cargo_data  AAAAA_0.instructions  Expect.txt
Ex2/exm/sim6/: BBBBB_0.instructions  BBBBB_1.instructions  BBBBB_2.instructions  Ports.route
Ex2/exm/sim7/: BBBBB_0.instructions
Ex2/exm/sim8/: Ports.route  res2.txt
Ex2/exm/yahav/: Readme  Route.route
Ex2/simulator/: Error.cpp  Error.h  Simulation.cpp  Simulation.h  SimulationUtility.cpp  SimulationUtility.h  main.cpp  makefile
Ex2/test_travel/bad_port_names_travel/: p.ship_plan  r.route
Ex2/test_travel/invalid_travel/: AAAAA_1.cargo_data  MM_1
Ex2/test_travel/medium_travel/: p.ship_plan
Stam/Common/: InputUtility.h  WeightBalanceCalculator.h
Stam/Simulator/: AlgorithmRegistration.cpp  main.cpp
ex1/: readme.txt
ex1/src/: AlgorithmError.cpp  Instruction.cpp  Port.h  Ship.cpp  Ship.h  StowageAlgorithm.cpp  StowageAlgorithm.h  Utility.cpp  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
ex2/: bonus.txt
ex2/algorithm/: GenericAlgorithm.cpp  GenericAlgorithm.h  RandomAlgorithm.cpp  SimpleAlgorithm.cpp  SimpleAlgorithm.h
ex2/common/: AlgorithmManager.cpp  DistanceToDestinationComparator.cpp  DistanceToDestinationComparator.h  GeneralUtility.h  InputUtility.h  Instruction.cpp  OutputUtility.cpp  (+2 more)
ex2_extras/: CMakeLists.txt  run_command.txt
ex3/: .gitignore  CMakeLists.txt  init.sh  readme.txt  students.txt
ex3/algorithm/: GenericAlgorithm.cpp  GenericAlgorithm.h  RandomAlgorithm.cpp  RandomAlgorithm.h  SimpleAlgorithm.cpp  SimpleAlgorithm.h  makefile
ex3/algorithm/badAlgorithm/: BadAlgorithm.cpp
ex3/common/: AbstractAlgorithm.h  AlgorithmError.cpp  AlgorithmManager.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  Container.cpp  Container.h  GeneralUtility.h  InputUtility.cpp  InputUtility.h  Instruction.cpp  Instruction.h  OutputUtility.cpp  OutputUtility.h  Port.cpp  Ship.cpp  Ship.h  WeightBalanceCalculator.cpp
ex3/example_travels/Travel_1/: 1.route  1.ship_plan  AAAAA_1.cargo_data  BBBBB_0.cargo_data  BBBBB_1.cargo_data  CCCCC_0.instructions
ex3/example_travels/Travel_2/: 1.route  1.ship_plan
ex3/example_travels/Travel_3/: p.ship_plan
ex3/example_travels/Travel_4/: Ports.route
ex3/example_travels/Travel_5/: 1.route  AAAAA_1.cargo_data  BBBBB_1.cargo_data
ex3/simulator/: AbstractTasksProducer.h  AlgorithmRegistration.cpp  Error.h  PreProcessingTasksProducer.cpp  PreProcessingTasksProducer.h  Simulation.cpp  Simulation.h  SimulationTasksProducer.cpp  SimulationTasksProducer.h  SimulationUtility.cpp  SimulationUtility.h  ThreadPoolExecutor.h  TravelData.cpp  TravelData.h  main.cpp  makefile
expected_output/: ABCDF.csv  ABCDG.csv  simulation_results.csv
src/: AlgorithmError.cpp  AlgorithmError.h  Balancer.cpp  Balancer.h  CargoShip.cpp  CargoShip.h  Container.cpp  Container.h  Crane.h  Error.cpp  Error.h  Floor.cpp  Floor.h  Instruction.cpp  Instruction.h  Port.cpp  Port.h  Ship.cpp  Ship.h  Simulation.cpp  Simulation.h  StowageAlgorithm.cpp  StowageAlgorithm.h  Utility.cpp  Utility.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h  main.cpp
(+67 files in other folders)
